@@ -20,7 +20,7 @@ export BASE_DOC_DIR = docs
 
 export cs = $(CLASSPATH_SEP)
 export other_classes = \
-	$(BTOOLS)$(cs)$(JYTHON)$(cs)$(JAVAHELP)$(cs)$(EXTRA_CLASSES)
+	$(BTOOLS)$(cs)$(JYTHON)$(cs)$(EXTRA_CLASSES)
 
 export LICENSE = LICENSE.txt
 
