@@ -76,7 +76,7 @@ Legend:
 	<td><a href="http://www.javasoft.com/products/javahelp/">
 		http://www.javasoft.com/products/javahelp/</a></td>
 	<td>Regina only needs access to the single file <i>jh.jar</i>.</td>
-	<td bgcolor="#FF7979">(same as for binaries)</td></tr>
+	<td>Not needed</td></tr>
 <tr><td>omniORB (<b>optional</b> - used to run the calculation engine as a
 		CORBA server)</td><td>&gt;= 3</td>
 	<td><a href="http://www.uk.research.att.com/omniORB/omniORB.html">
@@ -163,7 +163,7 @@ Legend:
 	<td><a href="http://www.javasoft.com/products/javahelp/">
 		http://www.javasoft.com/products/javahelp/</a></td>
 	<td>Regina only needs access to the single file <i>jh.jar</i>.</td>
-	<td bgcolor="#FF7979">(same as for binaries)</td></tr>
+	<td>Not needed</td></tr>
 <tr><td>GNU multiprecision arithmetic library</td><td>&gt;= 2</td>
 	<td><a href="ftp://ftp.gnu.org/gnu/gmp/">ftp://ftp.gnu.org/gnu/gmp/</a>
 		(<i>libgmp</i> sources) or the <a href="cygwin.html#gmp">Cygwin support page</a>
